[package]
name = "orao-aptos-vrf"
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
keywords = ["aptos", "vrf", "ed25519", "randomness", "randomizer"]
description = "ORAO Verifiable Random Function for Aptos."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
aptos-sdk = { workspace = true }
hex = { workspace = true }
url = "2.3.1"
serde = { workspace = true }
