[package]
name = "orao-aptos-vrf"
version = "0.2.2"
authors = ["ORAO Devs <hello@orao.network>"]
homepage = "https://orao.network"
repository = "https://github.com/orao-network/aptos-vrf"
rust-version = "1.68"
edition = "2021"
license = "Apache-2.0"
keywords = ["aptos", "vrf", "ed25519", "randomness", "randomizer"]
description = "ORAO Verifiable Random Function for Aptos."

[dependencies]
anyhow = "1.0.68"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet" }
hex = "0.4.3"
url = "2.3.1"
serde = "1.0.152"
serde_json = "1.0.111"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
