[package]
name = "orao-vrf-offchain-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
hex = "0.4.3"
indicatif = "0.17.2"
once_cell = "1.16.0"
orao-aptos-vrf = { path = "../../rust" }
rand = "0.7.3"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
url = "2.3.1"
