[package]
name = "orao-vrf-offchain-demo"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
aptos-sdk.workspace = true
hex.workspace = true
indicatif = "0.17.2"
once_cell = "1.16.0"
orao-aptos-vrf = { path = "../../rust" }
rand = "0.7.3"
tokio.workspace = true
url = "2.3.1"
